--- a/app/templates/user/home.html
+++ b/app/templates/user/home.html
@@ -129,25 +129,20 @@
         </div>
     </section>
     <section class="second">
-        {% if request.session.code_session %}
-        <p>Welcome, user {{ request.session.user_id }}!</p>
-        {% else %}
-            <p>Guest user. Please log in to access more features.</p>
-        {% endif %}
+        <h2>Bienvenue chez TravelMor</h2>
+        <p>Découvrez le monde avec TravelMor, votre partenaire ultime pour des voyages inoubliables. Que vous soyez à la recherche d'aventures exotiques, de détente sur des plages de rêve ou d'exploration culturelle, nous avons le voyage parfait pour vous.</p>
 
-        nothing
-        <br><br><br><br><br><br><br><br><br><br>
-        nothing
-        <br><br><br><br><br><br><br><br><br><br>
-        nothing
-        <br><br><br><br><br><br><br><br><br><br>
-        nothing
-        <br><br><br><br><br><br><br><br><br><br>
-        nothing
-        <br><br><br><br><br><br><br><br><br><br>
-        nothing
-        <br><br><br><br><br><br><br><br><br><br>
-        nothing
+        <h3>Pourquoi choisir TravelMor?</h3>
+        <p>À TravelMor, nous sommes passionnés par la création d'expériences de voyage exceptionnelles. Notre équipe dévouée est là pour vous aider à planifier chaque détail de votre voyage, du choix de la destination aux activités sur place.</p>
+
+        <h3>Destinations Captivantes</h3>
+        <p>Explorez nos destinations exceptionnelles soigneusement sélectionnées, allant des métropoles animées aux destinations exotiques. Chaque endroit que nous proposons promet une aventure unique et mémorable.</p>
+
+        <h3>Offres Spéciales</h3>
+        <p>Découvrez nos offres spéciales et forfaits exclusifs. Que vous recherchiez une escapade romantique, des vacances en famille ou une aventure solo, nous avons des offres qui répondent à toutes vos envies.</p>
+
+        <h3>Contactez-nous</h3>
+        <p>Prêt à commencer votre prochaine aventure? Contactez notre équipe dès aujourd'hui. Nous sommes là pour répondre à toutes vos questions et vous aider à planifier le voyage de vos rêves.</p>
     </section>
 {% endblock %}
 {% block js_block %} 
