--- a/app/static/css/detailed_card.css
+++ b/app/static/css/detailed_card.css
@@ -165,6 +165,7 @@
     gap: 50px;
     padding: 10px 20px;
     width: 100%;
+    position: relative;
 }
 
 .vols-box .vol:not(:last-child) {
@@ -193,6 +194,24 @@
     height: auto;
 }
 
+.vols-box .vol a {
+    text-decoration: none;
+    padding: 10px 20px;
+    outline: none;
+    border: none;
+    width: fit-content;
+    cursor: pointer;
+    background-color: var(--main--green);
+    font-weight: 600;
+    position: absolute;
+    right: 50px;
+    color: #fff;
+    transition: all .2s ease;
+}
+
+.vols-box .vol a:hover {
+    opacity: .8;
+}
 
 /* comments styling */
 
