--- a/app/templates/user/promotions_details.html
+++ b/app/templates/user/promotions_details.html
@@ -119,7 +119,7 @@
           >{%endif %}
         </p>
         <div class="price">+{{ vol.id_vol.prix_vol }} MAD</div>
-        <button><a href= "{%url 'paiement'  vol.id_vol.id_vol%}" > Choisir</a> </button>
+        <a href= "{%url 'paiement'  vol.id_vol.id_vol%}" > Choisir</a>
       </div>
     </div>
     {% endfor%}
