--- a/app/templates/admin_pages/base.html
+++ b/app/templates/admin_pages/base.html
@@ -21,7 +21,7 @@
                 <li><a {% block main_menu_link_class1 %} {% endblock %} href="{% url "dashboard_gestion" %}"><i class="fa fa-bar-chart"></i></i></i>Dashboard</a></li>
                 <li><a {% block main_menu_link_class2 %} {% endblock %} href="{% url "voyages_gestion" %}"><i class="fa-solid fa-person-walking-luggage"></i></i>Voyages</a></li>
                 <li><a {% block main_menu_link_class3 %} {% endblock %} href="{% url "hotels_gestion" %}"><i class="fa fa-building"></i>Hotels</a></li>
-                <li><a {% block main_menu_link_class4 %} {% endblock %} href="{% url "utilisateurs_gestion" %}"><i class="fa fa-building"></i>Utilisateurs</a></li>
+                <li><a {% block main_menu_link_class4 %} {% endblock %} href="{% url "utilisateurs_gestion" %}"><i class="fa-solid fa-user-tie"></i>Utilisateurs</a></li>
                 <li><a {% block main_menu_link_class5 %} {% endblock %} href="{% url "promotions_gestion" %}"><i class="fa fa-percent"></i>Promotions</a></li>
                 <li><a {% block main_menu_link_class6 %} {% endblock %} href="{% url "vols_gestion" %}"><i class="fa-solid fa-plane-departure"></i>Vols</a></li>
                 <li><a {% block main_menu_link_class7 %} {% endblock %} href="{% url "notifications_gestion" %}"><i class="fa fa-bell"></i>Notifications</a></li>
