--- a/app/static/admin_styles/card.css
+++ b/app/static/admin_styles/card.css
@@ -9,6 +9,7 @@
 
 
 .cards .card {
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -21,6 +22,26 @@
     -webkit-box-shadow: 0px 0px 77px 25px rgba(226,226,226,1);
     -moz-box-shadow: 0px 0px 77px 25px rgba(226,226,226,1);
     cursor: pointer;
+    transition: all .5s;
+}
+
+.cards .card span {
+    transition: all .5s;
+}
+
+.cards .card:hover span {
+    scale : 1.1;
+    opacity: .3;
+}
+
+.cards .card span {
+    position: absolute;
+    font-size: 90px;
+    width: 100%;
+    overflow: hidden;
+    opacity: .1;
+    top: 0;
+    left: 0;
 }
 
 .cards .card:first-child {
