--- a/app/templates/admin_pages/hotels_gestion.html
+++ b/app/templates/admin_pages/hotels_gestion.html
@@ -17,7 +17,7 @@
         <form action="{% url 'modif_hotel' hotel.id_hotel%}" method="POST">
             {% csrf_token %}
             {{ form_modif.as_p }}
-            <button type="submit">Enregistrer</button>
+            <button type="submit"><i class="fa-solid fa-check"></i> Enregistrer</button>
         </form>
 
     {% elif form_ajout %}
@@ -27,10 +27,10 @@
     <label for="path_image" class="custom-file-label">Images du Hotel:
         <input type="file" name="path_image" multiple accept="image/*" />
     </label>
-    <button type="submit">Enregistrer</button>
+    <button type="submit"><i class="fa-solid fa-check"></i> Enregistrer</button>
     </form>
     {% else %}
-        <a class="ajtBtn" href="{% url 'ajout_hotel'%}">ajouter</a>
+        <a class="ajtBtn" href="{% url 'ajout_hotel'%}"><i class="fa-solid fa-plus"></i> Ajouter hotel</a>
     {% endif %}
     <div>
         <table>
