--- a/app/templates/admin_pages/promotions_gestion.html
+++ b/app/templates/admin_pages/promotions_gestion.html
@@ -39,17 +39,17 @@
                 <label for="{{ form_modif.pourcentage.id_for_label }}">Valeur promotion :</label>
                 {{ form_modif.pourcentage }}
             </p>
-            <button type="submit">Enregistrer</button>
+            <button type="submit"><i class="fa-solid fa-check"></i> Enregistrer</button>
         </form>
     
     {% elif form_ajout %}
     <form action="{% url 'ajout_promotion'%}" method="POST">
         {% csrf_token %}
         {{ form_ajout.as_p }}
-        <button type="submit">Enregistrer</button>
+        <button type="submit"><i class="fa-solid fa-check"></i> Enregistrer</button>
     </form>
     {% else %}
-        <a class="ajtBtn" href="{% url 'ajout_promotion'%}">ajouter</a>
+        <a class="ajtBtn" href="{% url 'ajout_promotion'%}"><i class="fa-solid fa-plus"></i> Ajouter</a>
     {% endif %}
 
     <div>
