--- a/app/templates/admin_pages/utilisateurs_gestion.html
+++ b/app/templates/admin_pages/utilisateurs_gestion.html
@@ -18,7 +18,7 @@
         <form action="{% url 'modif_utilisateur' utilisateur.id_utilisateur%}" method="POST">
             {% csrf_token %}
             {{ form_modif.as_p }}
-            <button type="submit">Enregistrer</button>
+            <button type="submit"><i class="fa-solid fa-check"></i> Enregistrer</button>
         </form>
 
 
@@ -26,10 +26,10 @@
         <form action="{% url 'ajout_utilisateur'%}" method="POST">
             {% csrf_token %}
             {{ form_ajout.as_p }}
-            <button type="submit">Enregistrer</button>
+            <button type="submit"><i class="fa-solid fa-check"></i> Enregistrer</button>
         </form>
     {% else %}
-        <a class="ajtBtn" href="{% url 'ajout_utilisateur'%}">ajouter</a>
+        <a class="ajtBtn" href="{% url 'ajout_utilisateur'%}"><i class="fa-solid fa-plus"></i> Ajouter utilisateur</a>
     {% endif %}
 
     <div>
