--- a/app/templates/user/home.html
+++ b/app/templates/user/home.html
@@ -44,11 +44,12 @@
             color: #000; 
             font-size: 1.5rem;
         }
+        
     </style>
 {% endblock block_css %}
 {% block bell_notif %}
-<i class="fa-solid fa-bell"><span></span></i>
-<div class="user-notifications">
+<i class="fa-solid fa-bell">{% if notifications.count > 0 %}<span></span>{% endif %}</i>
+<div class="user-notifications" id="user-notifications">
     <ul>
         {% for notification in notifications %}
             <li class="{{ notification.id_notification.type }}">
@@ -56,6 +57,11 @@
                 <span class="temp">{{ notification.id_notification.date_notif }} {{ notification.id_notification.heure_d_notif}}</span>
             </li>
         {% endfor %}
+        {% if notifications.count == 0 %}
+            <li>
+                <span class="content">0 notifications</span>
+            </li>
+        {% endif %}
     </ul>
 </div>
 {% endblock bell_notif %}
