--- a/app/templates/user/hotels.html
+++ b/app/templates/user/hotels.html
@@ -6,7 +6,22 @@
 <link rel="stylesheet" href="{% static 'css/card.css' %}">
 {% endblock block_css %}
 {% block bell_notif %}
-<i class="fa-solid fa-bell"><span></span></i>
+<i class="fa-solid fa-bell">{% if notifications.count > 0 %}<span></span>{% endif %}</i>
+<div class="user-notifications" id="user-notifications">
+    <ul>
+        {% for notification in notifications %}
+            <li class="{{ notification.id_notification.type }}">
+                <span class="content">{{ notification.id_notification.content}}</span>
+                <span class="temp">{{ notification.id_notification.date_notif }} {{ notification.id_notification.heure_d_notif}}</span>
+            </li>
+        {% endfor %}
+        {% if notifications.count == 0 %}
+            <li>
+                <span class="content">0 notifications</span>
+            </li>
+        {% endif %}
+    </ul>
+</div>
 {% endblock bell_notif %}
 {% block menu_per_log_case %}
     {% if request.session.code_session %}
@@ -40,15 +55,19 @@
 {% block main %}
 <section class="second">
     {% for hotel in query %}
-         
-    <div class="mini-card-hotel">
+    <form id="filterForm">
+        <label for="locationFilter">Filtrer par localisation:</label>
+        <input type="text" id="locationFilter" name="locationFilter" placeholder="Entrer une localisation">
+        <button type="button" id="filterFormId">Filtrer</button>
+    </form>
+    <div class="mini-card-hotel filterable">
         <div class="image">
             <img src="{% static "assets/hotels/"%}{{ hotel.imagehotel_set.first.id_images.path_image }}" alt="">
         </div>
         <div class="body">
             <div class="title-localisation">
                 <span class="title">{{ hotel.nom_hotel }}</span>
-                <span class="localisation"><i class="fa-solid fa-location-dot"></i>&nbsp;{{ hotel.id_ville.nom_ville }}</span>
+                <span class="localisation filterable"><i class="fa-solid fa-location-dot"></i>&nbsp;{{ hotel.id_ville.nom_ville }}</span>
             </div>
             <div class="price"><img src="{% static 'assets/background-pricing.png' %}" alt="background-pricing"><span>{{ hotel.prix_nuit }} MAD/Pers.</span></div>
             <span class="type_ch">Type Chambre : <span>{{hotel.type_chambre}}</span></span>
@@ -63,3 +82,6 @@
     {% endfor %}
 </section>
 {% endblock main %}
+{% block js_block %}
+<script src="{% static "js/formFilter.js" %}" type='text/javascript'></script>
+{% endblock js_block %}
