--- a/app/templates/user/special_turqie_details.html
+++ b/app/templates/user/special_turqie_details.html
@@ -92,9 +92,7 @@
         <span class="localisation"><i class="fa-solid fa-location-dot"></i> {{ avoir.id_ville.id_pays.nom_pays }}, {{ avoir.id_ville.nom_ville }}</span>
         <span class="price">à partir de <span>{{ avoir.id_voyage.prix_voyage }} Dhs par personne</span></span>
         <span class="rating">Durée: <span>{{ avoir.id_voyage.duree_voyage }} jours / {{ avoir.id_voyage.duree_voyage|add:"-1" }} nuits</span></span>
-        <form method="get" action="/special_turqie_details/{{ avoir.id_voyage.id_voyage }}">
-            <button type="submit">J'en profite</button>
-        </form>
+        <button id="boutonVol">J'en profite</button>
     </div>            
 </div> 
 {% endfor %}
@@ -102,7 +100,7 @@
 
 
 
-<h4 style="text-align: center;">Les vols de ce voyage : </h4>
+<h4 style="text-align: center;" id="vol">Les vols de ce voyage : </h4>
 <div class = "vols-box">
     {% for vol in inclure %}
     <div class="vol">
@@ -163,6 +161,15 @@
 {% endblock main %}
 
 {% block js_block %}
+<script>
+    document.getElementById('boutonVol').addEventListener('click', function() {
+        // Déplacement vers la section avec l'id "vol"
+        var sectionVol = document.getElementById('vol');
+
+        // Défilement en douceur vers la section cible
+        sectionVol.scrollIntoView({ behavior: 'smooth' });
+    });
+</script>
 <script defer src="{% static 'js/detailed_card.js' %}"></script>
 
 <script defer>
