--- a/app/templates/user/special_asie_details.html
+++ b/app/templates/user/special_asie_details.html
@@ -117,6 +117,15 @@
         </div>
     </div>
     {% endfor%}
+    {% if inclure.count == 0 %}
+    <div class="vol">
+        <div class="body">
+            <p class="descrp">
+            Aucun vol pour le moment.
+            </p>
+        </div>
+    </div>
+    {% endif %}
 </div>
 
 <h4 style="text-align: center;">Les commentaire sur ce voyage : </h4>
